# industry_ai_for_CSAT

./: .gitignore  README.md  chat.py  lora_config.yaml  pyproject.toml  requirements.txt  run_training.sh  train.py
benchmark/: benchmark-mlx.py  benchmark-transformer.py
make-dataset/: build_kice_from_cot.py  convert_data_from_gemini_to_chat_format.py  convert_gemini_to_chat.py  convert_pdfs_to_png.py  convert_reponse_to_dataset.py  request_make_dataset_gemini.py  requirements.txt
result/: model_log.txt
